--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    //rxjava2
     implementation 'io.reactivex.rxjava2:rxjava:2.0.4'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    //Rx和Retrofit配合使用必须添加此依赖
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    //Gson
+    implementation 'com.google.code.gson:gson:2.7'
+    //stetho
+    implementation 'com.facebook.stetho:stetho:1.3.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+
 }
