--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,18 +27,35 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    //rxjava2
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.4'
+// 依赖RxAndroid 2X 的依赖库
+    // 增加RxJava 2X 的依赖库
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    //Rx和Retrofit配合使用必须添加此依赖
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    //Gson
-    implementation 'com.google.code.gson:gson:2.7'
-    //stetho
-    implementation 'com.facebook.stetho:stetho:1.3.1'
-    implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.7'
+
+    // OkHttp相关
+    implementation 'com.facebook.stetho:stetho:1.4.2'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.4.2'
+
+    // 网络请求相关
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:retrofit-mock:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    implementation "com.squareup.retrofit2:converter-scalars:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
+
+    implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1' // 操作功能防抖
+
+    // 让其有生命周期相关的依赖支持
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
+
+    implementation 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
 }
